--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <title>DSMOVIE</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>DSMOVIE</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-        crossorigin="anonymous"
-    />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+            crossorigin="anonymous"
+        />
 
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
 
-<body>
-    <header>
-        <nav class="container">
-            <h1>DSMovie</h1>
-            <div>
-                <img src="img/github.svg" alt="Github">
-                <a href="https://github.com/GuilhermeSaraiv">/GuilhermeSaraiv</a>
-            </div>
-        </nav>
-    </header>
-</body>
+    <body>
+        <header>
+            <nav class="container">
+                <h1>DSMovie</h1>
+                <div class="dsmovie-contact-container">
+                    <img src="img/github.svg" alt="Github">
+                    <a href="https://github.com/GuilhermeSaraiv">/GuilhermeSaraiv</a>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+            <section id="dsmovie-card-list" class="container">
+
+                <div class="dsmovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/kPsRQfoyYgcpbI6hvDQvUSCo0q3.jpg" alt="John Wick: Chapter 4">
+                    <div class="dsmovie-card-description">
+                        <h3>John Wick: Chapter 4</h3>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </section>
+        </main>
+    </body>
 </html>
 
