Listagem de cards

--- a/index.html
+++ b/index.html
@@ -27,13 +27,130 @@
         <main>
             <section id="dsmovie-card-list" class="container">
 
-                <div class="dsmovie-card">
-                    <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/kPsRQfoyYgcpbI6hvDQvUSCo0q3.jpg" alt="John Wick: Chapter 4">
-                    <div class="dsmovie-card-description">
-                        <h3>John Wick: Chapter 4</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                <div class="row">
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/kPsRQfoyYgcpbI6hvDQvUSCo0q3.jpg" alt="John Wick: Chapter 4">
+                            <div class="dsmovie-card-description">
+                                <h3>John Wick: Chapter 4</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
                     </div>
-                </div> 
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/gopGghuMtmdMviBcl9G0JfVB2RZ.jpg" alt="Animais Fantásticos: Os Segredos de Dumbledore">
+                            <div class="dsmovie-card-description">
+                                <h3>Animais Fantásticos: Os Segredos de Dumbledore</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/wd7b4Nv9QBHDTIjc2m7sr0IUMoh.jpg" alt="Batman (2022)">
+                            <div class="dsmovie-card-description">
+                                <h3>Batman (2022)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/nJUHX3XL1jMkk8honUZnUmudFb9.jpg" alt="Halo (2022)">
+                            <div class="dsmovie-card-description">
+                                <h3>Halo (2022)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/i0uajcHH9yogXMfDHpOXexIukG9.jpg" alt="Peaky Blinders: Sangue, Apostas e Navalhas (2013)">
+                            <div class="dsmovie-card-description">
+                                <h3>Peaky Blinders: Sangue, Apostas e Navalhas (2013)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/4j0PNHkMr5ax3IA8tjtxcmPU3QT.jpg" alt="Encanto (2021)">
+                            <div class="dsmovie-card-description">
+                                <h3>Encanto (2021)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/iM1hlVGZ5Qwn3gO6ewTszY7OrLY.jpg" alt="Doutor Estranho (2016)">
+                            <div class="dsmovie-card-description">
+                                <h3>Doutor Estranho (2016)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/1iVjKCGHPVNj7IQVB1DdpL8U7Y8.jpg" alt="A Era do Gelo: As Aventuras de Buck (2022)">
+                            <div class="dsmovie-card-description">
+                                <h3>A Era do Gelo: As Aventuras de Buck (2022)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/fVzXp3NwovUlLe7fvoRynCmBPNc.jpg" alt="Homem-Aranha: Sem Volta Para Casa (2021)">
+                            <div class="dsmovie-card-description">
+                                <h3>Homem-Aranha: Sem Volta Para Casa (2021)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/9PbtCo5IIkd26WPQfZUpPyn6fTz.jpg" alt="Hotel Transilvânia: Transformonstrão (2022)">
+                            <div class="dsmovie-card-description">
+                                <h3>Hotel Transilvânia: Transformonstrão (2022)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/uULLNqnB0n5Ug4F5NA0CV4NwKLv.jpg" alt="Cidade Perdida (2022)">
+                            <div class="dsmovie-card-description">
+                                <h3>Cidade Perdida (2022)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                        <div class="dsmovie-card">
+                            <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/tnmdUnztAYbfJ0jhjpN6oxwP2sb.jpg" alt="Avatar: O Caminho da Água (2022)">
+                            <div class="dsmovie-card-description">
+                                <h3>Avatar: O Caminho da Água (2022)</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                
             </section>
         </main>
     </body>
