Avaliação com estrelas

--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
                             <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/kPsRQfoyYgcpbI6hvDQvUSCo0q3.jpg" alt="John Wick: Chapter 4">
                             <div class="dsmovie-card-description">
                                 <h3>John Wick: Chapter 4</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <div class="dsmovie-card-description-boton">
+                                    <h4>3.8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="">
+                                        <img src="img/star-full.svg" alt="">
+                                        <img src="img/star-full.svg" alt="">
+                                        <img src="img/star-half.svg" alt="">
+                                        <img src="img/star-empty.svg" alt="">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
